# urled

./: __main__.py  init  pyproject.toml
src/: main.py  utils.py
src/cli/: argv.py  commands.py  handlers.py  prints.py  runner.py
src/core/: chars.py  ht.py  key_terms.py  text_filname_parse.py  url.py
test/: test.py
