[tool.poetry]
name = "urled"
version = "0.1.0"
description = "Parse to/from url and other text to filename accepted format/text"
authors = ["Reverse Chemistry <reversechemistry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
